tests/expectations/execution/external_storage_vector.out
Error while running execution tests:
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'async'
    --> compiler-test:15:5
     |
  15 |     async transition push_a() -> Future {
     |     ^^^^^


Errors:
